# krypto

./: CMakeLists.txt  chacha20poly1305.c  index.html  krypto.js  krypto.wasm  krypto0.js
include/: chacha20.h  chacha20poly1305.h  poly1305.h  utils.h
src/: chacha20.c  chacha20poly1305.c  main.c  poly1305.c  utils.c
